fix error in javascript events not showing in mobile

--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -183,8 +183,8 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
-  padding-left: 20rem;
-  padding-right: 20rem;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
 .title-hr {
